v1/docs/ModelsCertificateRetrievalResponseLocationCountModel.md
# ModelsCertificateRetrievalResponseLocationCountModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Type** | Pointer to **string** |  | [optional] 
**Count** | Pointer to **int32** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseLocationCountModel

`func NewModelsCertificateRetrievalResponseLocationCountModel() *ModelsCertificateRetrievalResponseLocationCountModel`

NewModelsCertificateRetrievalResponseLocationCountModel instantiates a new ModelsCertificateRetrievalResponseLocationCountModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseLocationCountModelWithDefaults

`func NewModelsCertificateRetrievalResponseLocationCountModelWithDefaults() *ModelsCertificateRetrievalResponseLocationCountModel`

NewModelsCertificateRetrievalResponseLocationCountModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseLocationCountModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetType

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) GetType() string`

GetType returns the Type field if non-nil, zero value otherwise.

### GetTypeOk

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) GetTypeOk() (*string, bool)`

GetTypeOk returns a tuple with the Type field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetType

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) SetType(v string)`

SetType sets Type field to given value.

### HasType

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) HasType() bool`

HasType returns a boolean if a field has been set.

### GetCount

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) GetCount() int32`

GetCount returns the Count field if non-nil, zero value otherwise.

### GetCountOk

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) GetCountOk() (*int32, bool)`

GetCountOk returns a tuple with the Count field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCount

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) SetCount(v int32)`

SetCount sets Count field to given value.

### HasCount

`func (o *ModelsCertificateRetrievalResponseLocationCountModel) HasCount() bool`

HasCount returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


